// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navDown renders 0 1`] = `
Array [
  .c0 {
  -webkit-nav-down: 0;
  -moz-nav-down: 0;
  -ms-nav-down: 0;
  nav-down: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: 0;
  -moz-nav-down: 0;
  -ms-nav-down: 0;
  nav-down: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: 0;
  -moz-nav-down: 0;
  -ms-nav-down: 0;
  nav-down: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: 0;
  -moz-nav-down: 0;
  -ms-nav-down: 0;
  nav-down: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders function 1`] = `
Array [
  .c0 {
  -webkit-nav-down: hasnot;
  -moz-nav-down: hasnot;
  -ms-nav-down: hasnot;
  nav-down: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: has;
  -moz-nav-down: has;
  -ms-nav-down: has;
  nav-down: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: hasnot;
  -moz-nav-down: hasnot;
  -ms-nav-down: hasnot;
  nav-down: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: has;
  -moz-nav-down: has;
  -ms-nav-down: has;
  nav-down: has;
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-nav-down: invalid.path.1;
  -moz-nav-down: invalid.path.1;
  -ms-nav-down: invalid.path.1;
  nav-down: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: invalid.path.1;
  -moz-nav-down: invalid.path.1;
  -ms-nav-down: invalid.path.1;
  nav-down: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: invalid.path.1;
  -moz-nav-down: invalid.path.1;
  -ms-nav-down: invalid.path.1;
  nav-down: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: invalid.path.1;
  -moz-nav-down: invalid.path.1;
  -ms-nav-down: invalid.path.1;
  nav-down: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders negative number 1`] = `
Array [
  .c0 {
  -webkit-nav-down: -54881;
  -moz-nav-down: -54881;
  -ms-nav-down: -54881;
  nav-down: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: -54881;
  -moz-nav-down: -54881;
  -ms-nav-down: -54881;
  nav-down: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: -42365;
  -moz-nav-down: -42365;
  -ms-nav-down: -42365;
  nav-down: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: -42365;
  -moz-nav-down: -42365;
  -ms-nav-down: -42365;
  nav-down: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-nav-down: July;
  -moz-nav-down: July;
  -ms-nav-down: July;
  nav-down: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: July;
  -moz-nav-down: July;
  -ms-nav-down: July;
  nav-down: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: January;
  -moz-nav-down: January;
  -ms-nav-down: January;
  nav-down: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: December;
    -moz-nav-down: December;
    -ms-nav-down: December;
    nav-down: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: June;
    -moz-nav-down: June;
    -ms-nav-down: June;
    nav-down: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: January;
  -moz-nav-down: January;
  -ms-nav-down: January;
  nav-down: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: December;
    -moz-nav-down: December;
    -ms-nav-down: December;
    nav-down: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: June;
    -moz-nav-down: June;
    -ms-nav-down: June;
    nav-down: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: July;
    -moz-nav-down: July;
    -ms-nav-down: July;
    nav-down: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: July;
    -moz-nav-down: July;
    -ms-nav-down: July;
    nav-down: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: June;
    -moz-nav-down: June;
    -ms-nav-down: June;
    nav-down: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: June;
    -moz-nav-down: June;
    -ms-nav-down: June;
    nav-down: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-nav-down: July;
  -moz-nav-down: July;
  -ms-nav-down: July;
  nav-down: July;
}

@media May {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: July;
  -moz-nav-down: July;
  -ms-nav-down: July;
  nav-down: July;
}

@media May {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: April;
  -moz-nav-down: April;
  -ms-nav-down: April;
  nav-down: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: January;
    -moz-nav-down: January;
    -ms-nav-down: January;
    nav-down: January;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: December;
    -moz-nav-down: December;
    -ms-nav-down: December;
    nav-down: December;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: April;
  -moz-nav-down: April;
  -ms-nav-down: April;
  nav-down: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: January;
    -moz-nav-down: January;
    -ms-nav-down: January;
    nav-down: January;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: December;
    -moz-nav-down: December;
    -ms-nav-down: December;
    nav-down: December;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-nav-down: July;
    -moz-nav-down: July;
    -ms-nav-down: July;
    nav-down: July;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-nav-down: July;
    -moz-nav-down: July;
    -ms-nav-down: July;
    nav-down: July;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: September;
    -moz-nav-down: September;
    -ms-nav-down: September;
    nav-down: September;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: November;
    -moz-nav-down: November;
    -ms-nav-down: November;
    nav-down: November;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: August;
    -moz-nav-down: August;
    -ms-nav-down: August;
    nav-down: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-nav-down: January;
    -moz-nav-down: January;
    -ms-nav-down: January;
    nav-down: January;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: December;
    -moz-nav-down: December;
    -ms-nav-down: December;
    nav-down: December;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: June;
    -moz-nav-down: June;
    -ms-nav-down: June;
    nav-down: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-nav-down: January;
    -moz-nav-down: January;
    -ms-nav-down: January;
    nav-down: January;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: December;
    -moz-nav-down: December;
    -ms-nav-down: December;
    nav-down: December;
  }
}

@media January {
  .c0 {
    -webkit-nav-down: April;
    -moz-nav-down: April;
    -ms-nav-down: April;
    nav-down: April;
  }
}

@media April {
  .c0 {
    -webkit-nav-down: May;
    -moz-nav-down: May;
    -ms-nav-down: May;
    nav-down: May;
  }
}

@media June {
  .c0 {
    -webkit-nav-down: June;
    -moz-nav-down: June;
    -ms-nav-down: June;
    nav-down: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-nav-down: 54881;
  -moz-nav-down: 54881;
  -ms-nav-down: 54881;
  nav-down: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: 54881;
  -moz-nav-down: 54881;
  -ms-nav-down: 54881;
  nav-down: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: 42365;
  -moz-nav-down: 42365;
  -ms-nav-down: 42365;
  nav-down: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: 42365;
  -moz-nav-down: 42365;
  -ms-nav-down: 42365;
  nav-down: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders string 1`] = `
Array [
  .c0 {
  -webkit-nav-down: July;
  -moz-nav-down: July;
  -ms-nav-down: July;
  nav-down: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: July;
  -moz-nav-down: July;
  -ms-nav-down: July;
  nav-down: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: June;
  -moz-nav-down: June;
  -ms-nav-down: June;
  nav-down: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: June;
  -moz-nav-down: June;
  -ms-nav-down: June;
  nav-down: June;
}

<div
    className="c0"
  />,
]
`;

exports[`navDown renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`navDown renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-nav-down: DarkSlateBlue;
  -moz-nav-down: DarkSlateBlue;
  -ms-nav-down: DarkSlateBlue;
  nav-down: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: DarkSlateBlue;
  -moz-nav-down: DarkSlateBlue;
  -ms-nav-down: DarkSlateBlue;
  nav-down: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: DarkSlateBlue;
  -moz-nav-down: DarkSlateBlue;
  -ms-nav-down: DarkSlateBlue;
  nav-down: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-nav-down: DarkSlateBlue;
  -moz-nav-down: DarkSlateBlue;
  -ms-nav-down: DarkSlateBlue;
  nav-down: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
